force-app/main/default/objects/APTTaskTemplate__c/APTTaskTemplate__c.object-meta.xml
<CustomObject>
    <description>Action Plan Template Task detail</description>
    <label>APT Task</label>
    <nameField>
        <label>APT Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APT Task Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>