force-app/main/default/objects/APTTaskTemplate__c/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <description>Replacement field for Assigned Type. Values from custom settings.</description>
    <label>Assigned Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Certified Accountant</fullName>
            </value>
            <value>
                <fullName>Customer Responsible and Remittance Resp</fullName>
            </value>
            <value>
                <fullName>Employee 1</fullName>
            </value>
            <value>
                <fullName>Employee 2</fullName>
            </value>
            <value>
                <fullName>Employee 3</fullName>
            </value>
            <value>
                <fullName>Employee 4</fullName>
            </value>
            <value>
                <fullName>Integration Resource</fullName>
            </value>
            <value>
                <fullName>Payroll Officer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Account Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>