force-app/main/default/objects/APTTaskTemplate__c/fields/AttachmentHeader__c.field-meta.xml
<CustomField>
    <fullName>AttachmentHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AttachmentHeader</label>
    <referenceTo>AttachmentHeader__c</referenceTo>
    <relationshipLabel>APT Task Templates</relationshipLabel>
    <relationshipName>APT_Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>