force-app/main/default/objects/APTTaskTemplate__c/fields/Initial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Start_Date__c</fullName>
    <label>Initial Start Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reporting Date</fullName>
            </value>
            <value>
                <fullName>Payroll Date</fullName>
            </value>
            <value>
                <fullName>Year end reporting date</fullName>
            </value>
            <value>
                <fullName>Closing date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>