force-app/main/default/objects/APTTaskTemplate__c/fields/IsMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify mandatory task - if it is then removing from action is disabled.</description>
    <inlineHelpText>Is task mandatory?</inlineHelpText>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>