force-app/main/default/objects/APTTaskTemplate__c/fields/Period_11__c.field-meta.xml
<CustomField>
    <fullName>Period_11__c</fullName>
    <label>Period 11</label>
    <type>Date</type>
</CustomField>