force-app/main/default/objects/APTTaskTemplate__c/fields/Period_12__c.field-meta.xml
<CustomField>
    <fullName>Period_12__c</fullName>
    <label>Period 12</label>
    <type>Date</type>
</CustomField>