force-app/main/default/objects/APTTaskTemplate__c/fields/Period_1__c.field-meta.xml
<CustomField>
    <fullName>Period_1__c</fullName>
    <label>Period 1</label>
    <type>Date</type>
</CustomField>