force-app/main/default/objects/APTTaskTemplate__c/fields/Plus_Days__c.field-meta.xml
<CustomField>
    <fullName>Plus_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plus Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>