force-app/main/default/objects/APTTaskTemplate__c/fields/TaskId__c.field-meta.xml
<CustomField>
    <fullName>TaskId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>TaskId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>