force-app/main/default/objects/APTTaskTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Action_Plan_Template__c</columns>
    <columns>taskIndex__c</columns>
    <columns>Frequency__c</columns>
    <columns>Period_1__c</columns>
    <columns>Period_2__c</columns>
    <columns>Period_3__c</columns>
    <columns>Period_4__c</columns>
    <columns>Period_5__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>