force-app/main/default/objects/APTTaskTemplate__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Action_Plan_Template__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsMandatory__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Subject__c</columns>
    <columns>Task_Number__c</columns>
    <columns>taskIndex__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Frequency__c</columns>
    <columns>Period_12__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>